package cn.zull.tracing.core;

/**
 * @author zurun
 * @date 2018/9/20 10:11:36
 */
public interface MqTraceContext extends TraceContext {
}
